# BiYeShiXi

./: CMakeLists.txt  Makefile  README.md  arm-toolchain.cmake  main.c  menu  menu-arm  test_v4l2  thunder
.cache/clangd/index/: main.c.80596F9737774A9D.idx  yuv_to_jpeg.c.6246A4D93910F53D.idx
build-arm/: CMakeCache.txt  Makefile  camera_capture  cmake_install.cmake
led/: Makefile  history.json  led.c
program/build-arm/: history.json  led  test  thunder  yuv_to_jpeg
program/build-x86/: ai_output.txt  history.json  led  menu  test.yuv
src/: menu.c  test_v4l2.c  thunder.c  yuv_to_jpeg.c
test_files/: ai_output.txt  test.yuv
